Social Media Estrategista

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </button>
             </a>
 
-            <a href="breve.html" target="_blank">
+            <a href="portfolio.html" target="_blank">
             <button class="learn-more"> Portfólio
             </button>
             </a>
@@ -65,7 +65,7 @@
         </div>
 
         <div class="ebook">
-            <a href="ebreve.html" target="_blank">
+            <a href="ebook.html" target="_blank">
             <img src="Imagens/ebook.png"></a>
             <p class="textebook">E-book</p>
         </div>
@@ -85,7 +85,7 @@
         </div>
 
         <div class="ebook50">
-            <a href="ebreve.html" target="_blank">
+            <a href="ebook.html" target="_blank">
             <img src="Imagens/ebook50.png"></a>
             <p class="textebook">E-book</p>
         </div>
@@ -106,7 +106,7 @@
         </div>
 
         <div class="ebook100">
-            <a href="ebreve.html" target="_blank">
+            <a href="ebook.html" target="_blank">
             <img src="Imagens/ebook100.png"></a>
             <p class="textebook">E-book</p>
         </div>
