--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
-    <link rel="stylesheet" type="text/css" href="breve.css">
+    <link rel="stylesheet" type="text/css" href="portfolio.css">
 </head>
 <body>
 
@@ -51,7 +51,7 @@
         </div>
 
         <div class="ebook">
-            <a href="ebreve.html" target="_blank">
+            <a href="ebook.html" target="_blank">
             <img src="Imagens/ebook.png"></a>
             <p class="textebook">E-book</p>
         </div>
